infrastructure/kubernetes/overlays/production/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-backend
spec:
  replicas: 4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-celery-worker
spec:
  replicas: 4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-frontend
spec:
  replicas: 3
